# solana-airdrop-contract

./: .gitignore  README.md
program/: Cargo.toml
program/src/: airdrop.rs  entrypoint.rs  error.rs  lib.rs
