[package]
name = "airdrop-program"
version = "0.1.0"
edition = "2018"
license = "MIT"
publish = false

[features]
no-entrypoint = []

[dependencies]
solana-program = "1.6.22"
thiserror = "1.0.24"
spl-token = {version = "3.1.1", features = ["no-entrypoint"]}
spl-associated-token-account = {version = "1.0.3", features = [ "no-entrypoint" ]}
arrayref = "0.3.6"
zeroize = "=1.3.0"

[lib]
crate-type = ["cdylib", "lib"]
